Fixed layout in unwrapped cookie slide in Product Page Product Carousel

--- a/components/product_page/top_section/product_images_carousel/product_images_carousel_styles.module.scss
+++ b/components/product_page/top_section/product_images_carousel/product_images_carousel_styles.module.scss
@@ -4,6 +4,7 @@
     padding-bottom: 64px;
 
     .slide_container {
+        height: 100%;
         padding: 32px;
         
         img {
